# mini-chat-for-claude

./: .gitignore  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anthropic.rs  commands.rs  lib.rs  main.rs  secrets.rs  sessions.rs  window.rs
